# rolling-mean

./: README.md  pyproject.toml
rolling_mean/: rolling_mean.py
tests/: test_metric.py
