[tool.poetry]
name = "rolling_mean"
version = "0.0.41"
description = "Rolling Mean Metric"
authors = ["Veit Wehner <sanvitoalsylvestre@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
pyopenssl = "^20.0.1"
pandas = "^1.3.4"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


